--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -236,7 +236,7 @@
 
 	<hr>
 
-	{% if settings.appId and settings.appSecret %}
+	{% if not settings.appId or not settings.appSecret %}
 		<h2>Step 4</h2>
 
 		<p>After saving your Instagram App ID and Secret, you need to authenticate with Instagram to get an access token. Click the button below to start the authorization flow with Instagram.</p>
