--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -257,10 +257,11 @@
 	{% else %}
 		<h2>Step 1</h2>
 
-		<p>First you need to create an Instagram App. You can do this by visiting the
+		<p>First you need to create an
+			<strong>Instagram App</strong>. You can do this by visiting the
 			<a href="https://developers.facebook.com">
 				Facebook Developers</a>
-			page.<br>When creating the app select use case 'Other', then 'Business'. and then you will be able to Set Up the
+			page.<br>When creating the app select use case <strong>Other</strong>, then <strong>Business</strong>. and then you will be able to Set Up the
 			<strong>Instagram API</strong>.</p>
 
 		<p>Add your instagram account to
